Portfoilo almost done

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             Tricia Strickland
         </h1>
         <nav>
-            <a href="">
+            <a href="#aboutme">
                 About Me
             </a> 
-            <a href="">
+            <a href="#Projects">
                 Projects 
             </a> 
             <a href="">
@@ -25,9 +25,74 @@
             <a href="">
                 Resume 
             </a> 
-
         </nav>
     </header>
+    <main>
+        <section id="aboutme">
+            <h2>
+                About Me
+            </h2>
+            <p>
+                Hey, im cia and i'm great. 
+            </p>
+        </section>
+
+        <section id="Projects">
+            <h2>
+                Projects
+            </h2>
+        <div class="Container_for_all_classes">
     
+            <div class='project_container'>
+                <h3>
+                    Projects
+                </h3>
+                <p>
+                    HTML, 
+                </p>
+                <p>
+                    <a href="https://www.github.com">
+                        Link to github
+                    </a>
+                </p>
+            </div>
+
+            <div class='project_container'>
+                <h3>
+                    Projects 
+                </h3>
+                <p>
+                    HTML, 
+                </p>
+                <p>
+                    <a href="https://www.github.com">
+                        Link to github
+                    </a>
+                </p>
+            </div>
+        </div>
+        </section>
+
+        
+    </main>
+
+    <footer id="contacts">
+        <h2>
+            Contacts
+        </h2>
+        <div class="contacts_container">
+            <p><a href="https://github.com/tstrickland88">
+                github
+            </a> 
+            </p>
+            <p><a href="https://www.linkedin.com/in/tricia-strickland-984749b4/">
+                linkedin
+            </a> 
+            </p>
+            <p><a href="mailto:cia_strickland@gmail.com">
+                email 
+            </a> 
+        </div>
+    </footer>        
 </body>
 </html>
