--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#Projects">
                 Projects 
             </a> 
-            <a href="">
+            <a href="#contacts">
                 Contact Me 
             </a> 
             <a href="">
@@ -45,30 +45,36 @@
     
             <div class='project_container'>
                 <h3>
-                    Projects
+                    Community Connect 
                 </h3>
                 <p>
-                    HTML, 
+                    HTML, CSS, JQuery, API, Bootstrap
                 </p>
-                <p>
-                    <a href="https://www.github.com">
-                        Link to github
+                <div class="Plinks"> 
+                    <a href="https://al1879083.github.io/Group-6/" target="_blank">
+                        Live
+                    </a> 
+                    <a href="https://github.com/al1879083/Group-6" target="_blank">
+                        Github 
                     </a>
-                </p>
+                </div>
             </div>
 
             <div class='project_container'>
                 <h3>
-                    Projects 
+                    Run Buddy
                 </h3>
-                <p>
-                    HTML, 
+                <p> 
+                    HTML 
                 </p>
-                <p>
-                    <a href="https://www.github.com">
-                        Link to github
+                <div class="Plinks"> 
+                    <a href="https://tstrickland88.github.io/Runbuddy/" target="_blank">
+                        Live
+                    </a> 
+                    <a href="https://github.com/tstrickland88/Runbuddy/" target="_blank">
+                        Github 
                     </a>
-                </p>
+                </div>
             </div>
         </div>
         </section>
@@ -81,15 +87,15 @@
             Contacts
         </h2>
         <div class="contacts_container">
-            <p><a href="https://github.com/tstrickland88">
+            <p><a href="https://github.com/tstrickland88" target="_blank">
                 github
             </a> 
             </p>
-            <p><a href="https://www.linkedin.com/in/tricia-strickland-984749b4/">
+            <p><a href="https://www.linkedin.com/in/tricia-strickland-984749b4/" target="_blank">
                 linkedin
             </a> 
             </p>
-            <p><a href="mailto:cia_strickland@gmail.com">
+            <p><a href="mailto:cia_strickland@gmail.com" target="_blank">
                 email 
             </a> 
         </div>
